agregue le chatbot + config candidatos

--- a/html/candidatos.html
+++ b/html/candidatos.html
@@ -137,6 +137,38 @@
   </header>
 
   <main class="container mx-auto px-4 sm:px-6 lg:px-8 pt-8 pb-16">
+
+    <div class="max-w-6xl mx-auto my-12 px-4 sm:px-6 lg:px-8">
+
+      <nav class="flex text-sm mb-4" aria-label="Breadcrumb">
+        <ol class="inline-flex items-center space-x-1">
+          <li>
+            <a href="../index.html"
+              class="font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">
+              Inicio
+            </a>
+          </li>
+          <li>
+            <svg class="w-3 h-3 mx-1 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+              stroke-width="3" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+            </svg>
+          </li>
+          <li aria-current="page">
+            <span class="font-semibold text-light-text dark:text-dark-text">
+              Candidatos
+            </span>
+          </li>
+        </ol>
+      </nav>
+
+    </div>
+
+
+
+
+
+
     <h1 class="text-4xl font-bold text-center">Candidatos</h1>
     <p class="text-center mt-2 text-light-text-secondary dark:text-dark-text-secondary">Explora lista completa de
       candidatos para cada cargo en las Elecciones Generales del Perú 2026</p>
