--- a/html/compare.html
+++ b/html/compare.html
@@ -140,6 +140,59 @@
 
     <main class="pt-8 pb-16">
         <div class="max-w-7xl mx-auto my-12 px-4 sm:px-6 lg:px-8">
+             <nav class="flex text-sm mb-4" aria-label="Breadcrumb">
+                <ol class="inline-flex items-center space-x-1">
+                    <li>
+                        <a href="../index.html"
+                            class="font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">
+                            Inicio
+                        </a>
+                    </li>
+                    <li>
+                        <svg class="w-3 h-3 mx-1 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 24 24" stroke-width="3" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                        </svg>
+                    </li>
+                    <li>
+                        <a href="candidatos.html"
+                            class="font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">
+                            Candidatos
+                        </a>
+                    </li>
+                    <li>
+                        <svg class="w-3 h-3 mx-1 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 24 24" stroke-width="3" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                        </svg>
+                    </li>
+                    <li>
+                        <a href="cdtspresidenciales.html"
+                            class="font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">
+                            Presidenciales
+                        </a>
+                    </li>
+                    <li>
+                        <svg class="w-3 h-3 mx-1 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 24 24" stroke-width="3" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                        </svg>
+                    </li>
+                    <li aria-current="page">
+                        <span class="font-semibold text-light-text dark:text-dark-text">
+                            Comparar 
+                        </span>
+                    </li>
+                </ol>
+            </nav>
+
+
+
+
+
+
+
+
             <h2 class="text-3xl font-bold text-light-text dark:text-dark-text mb-2">Comparar Candidatos</h2>
             <p class="text-lg text-light-text-secondary dark:text-dark-text-secondary mb-6">
                 Compara las propuestas claves, formación y experiencia de tus candidatos.
