--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Calendario</a>
                     <a href="html/candidatos.html"
                         class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Candidatos</a>
-                    <a href="html/partido-politico.html"
+                    <a href="html/partido-politico1.html"
                         class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Partido
                         Político</a>
                     <a href="html/donde-voto.html"
