Update print statement from 'Hello' to 'Goodbye'

--- a/html/detalles-partido-politico.html
+++ b/html/detalles-partido-politico.html
@@ -6,7 +6,7 @@
     <title>Detalles del Partido - Elecciones Perú 2026</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     
-    <!-- INCLUIR LA BASE DE DATOS -->
+    <!--  BASE DE DATOS -->
     <script src="db-partidos.js"></script>
     
     <script>
@@ -551,7 +551,7 @@
             </div>
         </div>
 
-        <!-- Encabezado del partido (DINÁMICO) -->
+        <!-- Encabezado del partido dinamico -->
         <div id="party-header" class="bg-card-light-bg dark:bg-card-dark-bg border border-card-light-border dark:border-card-dark-border rounded-xl p-6 mb-8 card-gradient">
             <!-- Se llenará con JavaScript -->
         </div>
@@ -1329,4 +1329,5 @@
 
     </script>
 </body>
+
 </html>
