--- a/html/perfil.html
+++ b/html/perfil.html
@@ -72,7 +72,7 @@
                         class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Calendario</a>
                     <a href="candidatos.html"
                         class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Candidatos</a>
-                    <a href="partido-politico.html"
+                    <a href="partido-politico1.html"
                         class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Partido
                         Político</a>
                     <a href="noticias.html"
