Update links to partido-politico1.html

--- a/html/cdtspresidenciales.html
+++ b/html/cdtspresidenciales.html
@@ -208,7 +208,7 @@
                         class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Calendario</a>
                     <a href="candidatos.html"
                         class="text-sm font-medium text-primary dark:text-primary transition-colors border-b-2 border-primary">Candidatos</a>
-                    <a href="partido-politico.html"
+                    <a href="partido-politico1.html"
                         class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Partido Político</a>
                     <a href="noticias.html"
                         class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Noticias</a>
@@ -263,7 +263,7 @@
                     class="block px-3 py-2 rounded-md text-base font-medium text-light-text-secondary dark:text-dark-text-secondary hover:bg-gray-200 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors">Calendario</a>
                 <a href="candidatos.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-primary dark:text-primary hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors">Candidatos</a>
-                <a href="partido-politico.html"
+                <a href="partido-politico1.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-light-text-secondary dark:text-dark-text-secondary hover:bg-gray-200 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors">Partido Político</a>
                 <a href="noticias.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-light-text-secondary dark:text-dark-text-secondary hover:bg-gray-200 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors">Noticias</a>
