--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     class="block px-3 py-2 rounded-md text-base font-medium text-light-text-secondary dark:text-dark-text-secondary hover:bg-gray-200 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors">Calendario</a>
                 <a href="html/candidatos.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-light-text-secondary dark:text-dark-text-secondary hover:bg-gray-200 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors">Candidatos</a>
-                <a href="html/partido-politico.html"
+                <a href="html/partido-politico1.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-light-text-secondary dark:text-dark-text-secondary hover:bg-gray-200 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors">Partido
                     Político</a>
                 <a href="html/donde-voto.html"
@@ -279,30 +279,30 @@
             <div class="container mx-auto px-4 sm:px-6 lg:px-8 space-y-24">
 
                 <section class="info-grid">
-                    <div class="info-card">
-                        <img src="img/cards/card-1.png" alt="">
-                        <div class="content">
-                            <img src="img/cards/img1.png" class="icon-a">
-                            <h3>¿DÓNDE VOTO?</h3>
-                        </div>
+                <a href="html/donde-voto.html" class="info-card">
+                    <img src="img/cards/card-1.png" alt="">
+                    <div class="content">
+                        <img src="img/cards/img1.png" class="icon-a">
+                        <h3>¿DÓNDE VOTO?</h3>
                     </div>
-
-                    <div class="info-card">
-                        <img src="img/cards/card-1.png" alt="">
-                        <div class="content">
-                            <img src="img/cards/img2.png" class="icon-a">
-                            <h3>CONOCE A TUS CANDIDATOS</h3>
-                        </div>
+                </a>
+            
+                <a href="html/candidatos.html" class="info-card">
+                    <img src="img/cards/card-1.png" alt="">
+                    <div class="content">
+                        <img src="img/cards/img2.png" class="icon-a">
+                        <h3>CONOCE A TUS CANDIDATOS</h3>
                     </div>
-
-                    <div class="info-card">
-                        <img src="img/cards/card-1.png" alt="">
-                        <div class="content">
-                            <img src="img/cards/img3.png" class="icon-a">
-                            <h3>¿ERES MIEMBRO DE MESA?</h3>
-                        </div>
+                </a>
+            
+                <a href="html/donde-voto.html" class="info-card">
+                    <img src="img/cards/card-1.png" alt="">
+                    <div class="content">
+                        <img src="img/cards/img3.png" class="icon-a">
+                        <h3>¿ERES MIEMBRO DE MESA?</h3>
                     </div>
-                </section>
+                </a>
+            </section>
 
                 <section>
                     <h2 class="text-3xl font-bold text-center mb-12">ELECCIONES GENERALES 2026</h2>
